<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Errors" Id="{36e07823-07bf-41fb-b7ce-83aa7ba6069b}">
    <Declaration><![CDATA[TYPE ST_Errors :
STRUCT
	exEmergency						: ARRAY[1..GVL.MAX_ZONES+1] OF BOOL;  (*Emergecy Stop Active, Index=Zone, 1=Stacker, 2=Zipper, 3=Bundle Buffer track, 4=Vertical denester, 5=Bundle Outfeed // stop buttons.*)
	exEmStop						: BOOL;
	
	ex24VoltError1					: BOOL; 
	ex24VoltError2					: BOOL;
	
	exUpsAlarm						: BOOL;
	
	exAtteptedStartWithNoProduct	: BOOL;
	
	ConveyorErrors 					: ST_ConveyorErrors;
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>